# msg_client

./: CMakeLists.txt  JsonTypes.h  README.md  basewindow.cpp  basewindow.h  basewindow.ui  chatwidget.cpp  chatwidget.h  infouserwindow.cpp  infouserwindow.h  infouserwindow.ui  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messageinfo.cpp  messageinfo.h  messagewidget.cpp  messagewidget.h  socketmanager.cpp  socketmanager.h  userinfowindow.ui  windowmanager.cpp  windowmanager.h
